--- a/templates/results.html
+++ b/templates/results.html
@@ -18,7 +18,7 @@
         <b>Valor predictivo negativo:</b>&nbsp;{{res[4]}}
       </p>
       <div class="results__note">
-        <p><strong>NOTA:</strong> Valores calculados para COVID-19. Más información acerca de estas métricas <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/CONOCE%20COMO%20SE%20HAN%20REALIZADO%20LOS%20C%C3%81LCULOS.pdf" target="_blank">aquí</a>.</p>
+        <p><strong>NOTA:</strong> Valores calculados para COVID-19. Más información sobre estas métricas <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/CONOCE%20COMO%20SE%20HAN%20REALIZADO%20LOS%20C%C3%81LCULOS.pdf" target="_blank">aquí</a>.</p>
       </div>
     </div>
   {% endif %}
