--- a/static/styles/about.scss
+++ b/static/styles/about.scss
@@ -43,8 +43,8 @@
 @media (max-width: 750px) {
 
   .about {
-    margin: 4rem 1rem 1rem;
-    padding: 2rem 1rem;
+    margin: 4rem 0 1rem;
+    padding: 2rem 0.5rem;
 
     &__title {
       font-size: 6vw;
