Add English support for footer and about

--- a/templates/snippets/footer/footer.html
+++ b/templates/snippets/footer/footer.html
@@ -2,20 +2,28 @@
   {% block footer %}
   <a
     class="footer__link"
-    href="/about"
-  >Acerca de este proyecto y su finalidad</a>
+    href="{{ g.language }}/about"
+  >
+    {{ _('footer.about') }}
+  </a>
   <p class="footer__separator">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
   <a
     class="footer__link"
     href="https://api.cloud.ifca.es:8080/swift/v1/covid19/AVISO%20LEGAL%20Y%20POLITICA%20DE%20PRIVACIDAD.pdf"
     target="_blank"
-  >Términos y condiciones de uso</a>
+  >
+    {{ _('footer.terms-and-conditions') }}
+  </a>
   <p class="footer__separator">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
   <a
     class="footer__link"
     href="mailto:covid19training@ifca.unican.es"
-  >Contacta con nosotros</a>
+  >
+    {{ _('footer.contact-us') }}
+  </a>
   <p class="footer__separator">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
-  <p class="footer__copyright">Copyright &copy; IFCA - CSIC - HUMV</p>
+  <p class="footer__copyright">
+    {{ _('footer.copyright') }}
+  </p>
   {% endblock %}
 </footer>
