--- a/templates/about.html
+++ b/templates/about.html
@@ -1,27 +1,27 @@
 {% extends 'index.html' %}
-{% block title %}About{% endblock %}
+{% block title %}{{ _('about.block-title') }}{% endblock %}
 
 {% block content %}
 {% include "snippets/back-button/back-button.html" %}
 <div class="about">
   <div class="about__title">
-    <h2>ACERCA DE ESTE PROYECTO ...</h2>
+    <h2>{{ _('about.title') }}</h2>
   </div>
   <div class="about__row">
     <div class="about__column">
-      <h4>¿Quién lo ha desarrollado?</h4>
+      <h4>{{ _('about.paragraph.development.title') }}</h4>
   
-      <p class="about__paragraph">Este proyecto ha sido desarrollado de manera altruista y desinteresada por el grupo de <a href="https://ifca.unican.es/es-es/investigacion/computacion-avanzada-y-e-ciencia" target="_blank">Computación Avanzada y e-Ciencia</a> del IFCA y el <a href="http://rxhumv.blogspot.com/?m=1" target="_blank">Servicio de Radiodiagnóstico</a> del Hospital Universitario Marqués de Valdecilla. Ha contado con el apoyo de otros profesionales que se han prestado a brindar sus servicios sin coste alguno: gracias a <a href="https://www.linkedin.com/in/pedrosolisgarcia/" target="_blank" rel="LinkedIn">Pedro</a> por sus horas de programación; gracias a <a href="https://cafeconsultoriajuridica.negocio.site/" target="_blank">CAFE & ASOCIADOS</a> por la asesoria jurídica y confección de los términos y condiciones de uso.</p>
+      <p class="about__paragraph">{{ _('about.paragraph.development.content') }}</p>
     </div>
     <div class="about__column">
-      <h4>¿Cuál es su finalidad?</h4>
+      <h4>{{ _('about.paragraph.purpose.title') }}</h4>
   
-      <p class="about__paragraph">Ante la situación de crisis motivada por la pandemia, múltiples profesionales sanitarios se han visto en la necesidad de aprender a identificar en radiografías de tórax los hallazgos característicos de COVID-19. La finalidad de este proyecto es la de facilitar este proceso a médicos, a residentes, a estudiantes y a todos aquellos interesados en adquirir esta competencia, proporcionando una herramienta que presenta ejemplos de radiografías de pacientes COVID-19 y ejemplos de radiografías de pacientes con hallazgos que podrían plantear diagnósticos diferenciales.</p>
+      <p class="about__paragraph">{{ _('about.paragraph.purpose.content') }}</p>
     </div>
     <div class="about__column">
-      <h4>Dedicado a ...</h4>
+      <h4>{{ _('about.paragraph.dedications.title') }}</h4>
   
-      <p class="about__paragraph">Dedicado a todos los profesionales del <a href="http://www.humv.es" target="_blank">Hospital Universitario Marqués de Valdecilla</a> y del resto de instituciones sanitarias, que de manera ejemplar han luchado desde el comienzo de esta pandemia por salvaguardar la salud y la vida de todos. Gracias al personal médico y de enfermería de los servicios de urgencias, de intensivos y de las plantas COVID-19; gracias a los radiólogos, técnicos y pacientes de los servicios de radiodiagnóstico; gracias al personal de limpieza, seguridad y mantenimiento; y a todos aquellos implicados de manera directa o indirecta en esta crisis sanitaria.</p>
+      <p class="about__paragraph">{{ _('about.paragraph.dedications.content') }}</p>
     </div>
   </div>
 </div>
