--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -252,6 +252,37 @@
                 margin-left: 0.25rem;   }
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/not-found\.scss}line{font-family:\000031}}
+.not-found__title {
+  align-items: center;
+  display: flex;
+  font-size: 5vw;
+  font-weight: bolder;
+  justify-content: center; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/not-found\.scss}line{font-family:\000037}}
+  .not-found__title .error-404 {
+    color: #ff9900; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/not-found\.scss}line{font-family:\0000313}}
+.not-found__subtitle {
+  color: #d9d9d9; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/not-found\.scss}line{font-family:\0000317}}
+  .not-found__button {
+    width: 75%;
+    margin: 10rem auto 2rem; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/not-found\.scss}line{font-family:\0000324}}
+@media (max-width: 750px) {
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/not-found\.scss}line{font-family:\0000324}}
+  .not-found__title {
+    font-size: 15vw;   }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/not-found\.scss}line{font-family:\0000328}}
+    .not-found__button {
+      bottom: 12rem;
+      margin: unset;
+      position: absolute;
+      width: calc(100% - 2rem);   }
+}
+
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/results\.scss}line{font-family:\000031}}
 .results__details {
   background-color: #545454;
@@ -540,6 +571,29 @@ body {
       color: #212121; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/styles\.scss}line{font-family:\0000355}}
+.secondary-button {
+  background-color: transparent;
+  border: 2px solid #ff9900;
+  border-radius: 4px;
+  color: #ff9900;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  padding: 0.75rem;
+  text-decoration: none;
+  width: 100%; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/styles\.scss}line{font-family:\0000368}}
+  .secondary-button:hover {
+    background-color: #ff9900;
+    color: #212121; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/styles\.scss}line{font-family:\0000373}}
+    .secondary-button:active {
+      background-color: #ff9900;
+      color: #212121; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/styles\.scss}line{font-family:\0000380}}
 .page-wrapper {
   color: #fff;
   display: flex;
