--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %}Inicio{% endblock %}
+{% block title %}{{ _('login.block-title') }}{% endblock %}
 {% block head %}
   {{ super() }}
   <script src="{{ url_for('static',filename='controller/login.js') }}"></script>
@@ -10,13 +10,13 @@
   <div class="content login">
     {% include "snippets/avatar/avatar.html" %}
     <div class="login__label">
-      Inicia sesión en COVID-19 training
+      {{ _('login.label') }}
     </div>
     <div class="login__button">
       <button class="covid-button" onclick="onLogin()">
-        Iniciar sesión
+        {{ _('login.button') }}
       </button>
-      <p class="login__error" id="error"></p>
+      <p class="login__error" id="error">{{ _('login.button-error') }}</p>
     </div>
     <div class="login__terms">
       <input
@@ -26,7 +26,7 @@
         onclick="checkTerms()"
       >
       <label for="terms">
-        Acepto los términos y condiciones de uso
+        {{ _('login.terms-and-conditions.label') }}
       </label>
     </div>
   </div>
