--- a/templates/snippets/back-button/back-button.scss
+++ b/templates/snippets/back-button/back-button.scss
@@ -19,7 +19,7 @@
   &__wrapper {
     align-items: center;
     display: flex;
-    height: 4rem;
+    height: 3.5rem;
     left: 0;
     position: fixed;
     top: 0;
@@ -34,7 +34,7 @@
 
 @media (max-width: 750px) {
   .back-button {
-    margin-left: 0.25rem;
+    padding: 0;
 
     &__wrapper {
       background-color: #333;
