--- a/static/styles/home.scss
+++ b/static/styles/home.scss
@@ -112,16 +112,20 @@
       margin: 1rem auto 0;
     }
 
+    &__section {
+      margin: auto 0.5rem;
+    }
+
     &__paragraph {
       font-size: 20px;
       margin: 4rem auto 3rem;
       text-align: justify;
-      width: 95%;
+      width: 98%;
     }
 
     &__row {
       flex-direction: column;
-      width: 95%;
+      width: calc(100% - 1rem);
     }
 
     &__button, &__info {
